--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,144 @@
-keras==3.10.0
-keras_nightly==2.5.0.dev2021032900
+about-time==4.2.1
+absl-py==2.3.1
+alive-progress==3.3.0
+apache-tvm==0.14.dev273
+appdirs==1.4.4
+arrow==1.4.0
+astunparse==1.6.3
+attrs==25.4.0
+autograd==1.8.0
+Automat==25.4.16
+cachetools==6.2.4
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+cloudpickle==3.1.2
+cma==3.2.2
+cmake==4.2.0
+coloredlogs==15.0.1
+constantly==23.10.4
+cryptography==46.0.3
+cssselect==1.3.0
+cycler==0.12.1
+decorator==5.2.1
+defusedxml==0.7.1
+Deprecated==1.3.1
+dill==0.4.0
+docopt==0.6.2
+filelock==3.20.1
+flatbuffers==25.9.23
+fsspec==2025.12.0
+gast==0.4.0
+google-auth==2.45.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+graphemeu==0.7.2
+grpcio==1.76.0
+h5py==3.15.1
+humanfriendly==10.0
+hyperlink==21.0.0
+idna==3.11
+Incremental==24.11.0
+inform==1.35
+itemadapter==0.13.0
+itemloaders==1.3.2
+jax==0.4.30
+jaxlib==0.4.30
+Jinja2==3.1.6
+jmespath==1.0.1
+keras==2.12.0
+keras-nightly==2.5.0.dev2021032900
+kiwisolver==1.4.9
+libclang==18.1.1
+lit==18.1.8
+lxml==6.0.2
+Markdown==3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
 matplotlib==3.4.3
-numpy==1.24.4
+mdurl==0.1.2
+ml_dtypes==0.5.4
+mlc-ai-nightly-cpu==0.1
+mpmath==1.3.0
+namex==0.1.0
+networkx==3.6.1
+numpy==1.23.5
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu11==10.9.0.58
+nvidia-cufft-cu12==11.0.2.54
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu11==10.2.10.91
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu11==2.14.3
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu11==11.7.91
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.3.1
 onnx==1.17.0
 onnxruntime==1.19.2
-opencv_python==4.8.1.78
-Pillow==11.3.0
+opencv-python==4.8.1.78
+opt_einsum==3.4.0
+optree==0.18.0
+packaging==25.0
+parsel==1.10.0
+pillow==11.3.0
+Protego==0.5.0
+protobuf==4.25.8
+psutil==7.1.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+PyDispatcher==2.0.7
+Pygments==2.19.2
 pymoo==0.6.1.2
-scipy==1.16.0
-tensorflow==2.8.0
+pyOpenSSL==25.3.0
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+quantiphy==2.20
+queuelib==1.8.0
+requests==2.32.5
+requests-file==3.0.1
+requests-oauthlib==2.0.0
+rich==14.2.0
+rsa==4.9.1
+scipy==1.15.3
+Scrapy==2.13.4
+service-identity==24.2.0
+six==1.17.0
+sympy==1.14.0
+tensorboard==2.12.3
+tensorboard-data-server==0.7.2
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==3.2.0
+tldextract==5.3.0
 torch==2.4.1
 torchvision==0.19.1
+tornado==6.5.4
+triton==3.0.0
 tvm==1.0.0
+Twisted==25.5.0
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.2
+w3lib==2.3.1
+Werkzeug==3.1.4
+wrapt==1.14.2
+zope.interface==8.1.1
