--- a/requirements.txt
+++ b/requirements.txt
@@ -1,144 +1,194 @@
 about-time==4.2.1
-absl-py==2.3.1
+absl-py==2.1.0
 alive-progress==3.3.0
-apache-tvm==0.14.dev273
-appdirs==1.4.4
-arrow==1.4.0
+apache-tvm==0.11.1
+apt-clone==0.2.1
+apturl==0.5.2
+asttokens==3.0.1
 astunparse==1.6.3
-attrs==25.4.0
+attrs==25.1.0
 autograd==1.8.0
-Automat==25.4.16
-cachetools==6.2.4
-certifi==2025.11.12
+auxlib==0.0.43
+backcall==0.2.0
+bcrypt==3.2.0
+beautifulsoup4==4.14.3
+bleach==6.3.0
+blinker==1.4
+Brlapi==0.8.3
+certifi==2020.6.20
 cffi==2.0.0
-charset-normalizer==3.4.4
-cloudpickle==3.1.2
-cma==3.2.2
-cmake==4.2.0
+chardet==4.0.0
+click==8.0.3
+cloudpickle==3.1.1
+cma==4.4.1
+colorama==0.4.4
 coloredlogs==15.0.1
-constantly==23.10.4
-cryptography==46.0.3
-cssselect==1.3.0
+command-not-found==0.3
+contourpy==1.3.2
+cryptography==3.4.8
+cupshelpers==1.0
 cycler==0.12.1
+dbus-python==1.2.18
 decorator==5.2.1
+defer==1.0.6
 defusedxml==0.7.1
 Deprecated==1.3.1
-dill==0.4.0
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
 docopt==0.6.2
-filelock==3.20.1
-flatbuffers==25.9.23
-fsspec==2025.12.0
-gast==0.4.0
-google-auth==2.45.0
-google-auth-oauthlib==1.0.0
+duplicity==0.8.21
+entrypoints==0.4
+executing==2.2.1
+fasteners==0.14.1
+fastjsonschema==2.21.2
+filelock==3.17.0
+flatbuffers==24.3.25
+fonttools==4.61.1
+fsspec==2025.3.0
+future==0.18.2
+gast==0.6.0
 google-pasta==0.2.0
 graphemeu==0.7.2
-grpcio==1.76.0
-h5py==3.15.1
+grpcio==1.68.0
+gyp==0.1
+h5py==3.12.1
+httplib2==0.20.2
 humanfriendly==10.0
-hyperlink==21.0.0
-idna==3.11
-Incremental==24.11.0
-inform==1.35
-itemadapter==0.13.0
-itemloaders==1.3.2
-jax==0.4.30
-jaxlib==0.4.30
+idna==3.3
+importlib-metadata==4.6.4
+ipython==8.12.3
+jedi==0.19.2
+jeepney==0.7.1
 Jinja2==3.1.6
-jmespath==1.0.1
-keras==2.12.0
-keras-nightly==2.5.0.dev2021032900
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+jupyter_client==8.7.0
+jupyter_core==5.9.1
+jupyterlab_pygments==0.3.0
+keras==3.12.0
+keyring==23.5.0
 kiwisolver==1.4.9
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
 libclang==18.1.1
-lit==18.1.8
-lxml==6.0.2
-Markdown==3.10
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-matplotlib==3.4.3
+lockfile==0.12.2
+louis==3.20.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.3
+matplotlib-inline==0.2.1
 mdurl==0.1.2
+mistune==3.1.4
 ml_dtypes==0.5.4
-mlc-ai-nightly-cpu==0.1
+monotonic==1.6
+moocore==0.1.10
+more-itertools==8.10.0
 mpmath==1.3.0
-namex==0.1.0
-networkx==3.6.1
-numpy==1.23.5
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu11==8.5.0.96
+namex==0.0.8
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+netifaces==0.11.0
+networkx==3.4.2
+numpy==2.0.0
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
 nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu11==10.9.0.58
-nvidia-cufft-cu12==11.0.2.54
-nvidia-cufile-cu12==1.13.1.3
-nvidia-curand-cu11==10.2.10.91
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu11==2.14.3
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.8.93
-nvidia-nvshmem-cu12==3.3.20
-nvidia-nvtx-cu11==11.7.91
-nvidia-nvtx-cu12==12.1.105
-oauthlib==3.3.1
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+oauthlib==3.2.0
+olefile==0.46
 onnx==1.17.0
-onnxruntime==1.19.2
-opencv-python==4.8.1.78
+onnxruntime==1.21.0
+opencv-python==4.11.0.86
 opt_einsum==3.4.0
-optree==0.18.0
-packaging==25.0
-parsel==1.10.0
-pillow==11.3.0
-Protego==0.5.0
-protobuf==4.25.8
-psutil==7.1.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
+optree==0.13.1
+packaging==24.2
+PAM==0.4.2
+pandocfilters==1.5.1
+paramiko==2.9.3
+parso==0.8.5
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.0.1
+pipreqs==0.5.0
+platformdirs==4.5.1
+prompt_toolkit==3.0.52
+protobuf==5.28.3
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycairo==1.20.1
 pycparser==2.23
-PyDispatcher==2.0.7
-Pygments==2.19.2
-pymoo==0.6.1.2
-pyOpenSSL==25.3.0
-pyparsing==3.2.5
+pycups==2.0.1
+Pygments==2.18.0
+PyGObject==3.42.1
+PyICU==2.8.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+pymoo==0.6.1.6
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+python-apt==2.4.0+ubuntu4
 python-dateutil==2.9.0.post0
-quantiphy==2.20
-queuelib==1.8.0
-requests==2.32.5
-requests-file==3.0.1
-requests-oauthlib==2.0.0
-rich==14.2.0
-rsa==4.9.1
-scipy==1.15.3
-Scrapy==2.13.4
-service-identity==24.2.0
-six==1.17.0
-sympy==1.14.0
-tensorboard==2.12.3
+python-debian==0.1.43+ubuntu1.1
+pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
+pyzmq==27.1.0
+referencing==0.37.0
+reportlab==3.6.8
+requests==2.25.1
+requests-unixsocket==0.2.0
+rich==13.9.4
+rpds-py==0.30.0
+scipy==1.15.2
+SecretStorage==3.3.1
+simplejson==3.17.6
+six==1.16.0
+soupsieve==2.8.1
+stack-data==0.6.3
+sympy==1.13.1
+synr==0.6.0
+systemd-python==234
+tensorboard==2.20.0
 tensorboard-data-server==0.7.2
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
+tensorflow==2.20.0
 tensorflow-io-gcs-filesystem==0.37.1
-termcolor==3.2.0
-tldextract==5.3.0
-torch==2.4.1
-torchvision==0.19.1
-tornado==6.5.4
-triton==3.0.0
-tvm==1.0.0
-Twisted==25.5.0
-typing_extensions==4.15.0
-tzdata==2025.3
-urllib3==2.6.2
-w3lib==2.3.1
-Werkzeug==3.1.4
-wrapt==1.14.2
-zope.interface==8.1.1
+termcolor==2.5.0
+tinycss2==1.4.0
+torch==2.6.0
+torchvision==0.21.0
+tornado==6.4.2
+traitlets==5.14.3
+triton==3.2.0
+typing_extensions==4.12.2
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.5
+usb-creator==0.3.7
+wadllib==1.3.6
+wcwidth==0.2.14
+webencodings==0.5.1
+Werkzeug==3.1.3
+wrapt==1.16.0
+xdg==5
+xkit==0.0.0
+yarg==0.1.9
+zipp==1.0.0
